--- a/pca.ipynb
+++ b/pca.ipynb
@@ -233,6 +233,19 @@
     "    return components, adjusted_data, means\n",
     "\n",
     "\n",
+    "def get_transformed(data,number_of_dimensions=2,dataset_name):\n",
+    "    \n",
+    "    original_data, labels, labels_strings = load_arff_data(dataset_name)\n",
+    "    components, adjusted_data, means = pca(original_data, number_of_dimensions)\n",
+    "\n",
+    "    transformed_data = np.dot(adjusted_data, components.transpose())\n",
+    "\n",
+    "    adjusted_row_data=np.dot(components.transpose(),transformed_data.transpose())\n",
+    "    adjusted_row_data=adjusted_data.transpose()\n",
+    "    reconstructed_data=np.add(adjusted_row_data,means)\n",
+    "    return transformed_data,reconstructed_data,adjusted_row_data\n",
+    "    \n",
+    "\n",
     "def plot_dataset_2d(dataset_name):\n",
     "    original_data, labels, labels_strings = load_arff_data(dataset_name)\n",
     "    components, adjusted_data, means = pca(original_data, 2)\n",
@@ -242,8 +255,9 @@
     "    plot_data(transformed_data, labels, dataset_name)\n",
     "\n",
     "    print components.shape, transformed_data.shape\n",
-    "    reconstructed_data=np.dot(components.transpose(),transformed_data.transpose())\n",
-    "    reconstructed_data=reconstructed_data.transpose()\n",
+    "    adjusted_row_data=np.dot(components.transpose(),transformed_data.transpose())\n",
+    "    adjusted_row_data=adjusted_data.transpose()\n",
+    "    reconstructed_data=np.add(adjusted_row_data,means)\n",
     "    # reconstructed_data = np.add(adjusted_data, means)\n",
     "    #\n",
     "    # fig = plt.figure(figsize=(7, 7))\n",
